fix create recipe image stretch

--- a/client/src/components/CreateRecipe.css
+++ b/client/src/components/CreateRecipe.css
@@ -46,7 +46,6 @@
 
 .recipe-form-image-container img {
     height: 180px;
-    width: 150px;
     overflow: hidden;
 }
 
